# CNN-Baseline-Pytorch-Lightning

./: .gitignore  README.md  config.yml  pyproject.toml  train.py
hydra_output/.hydra/: config.yaml  hydra.yaml
input/: test.csv  train.csv
src/: datasets.py  lightning.py  models.py  transforms.py  utils.py
